--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_storage: ^11.4.1
   cloud_firestore: ^4.12.2
   url_launcher: ^6.2.1
+  google_fonts: ^6.2.1
   dio:
   fluttertoast:
   lottie:
