--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   rive: ^0.12.1
   bloc: ^8.1.2
+  intl: any
   smooth_page_indicator: ^1.1.0
   shared_preferences: ^2.2.2
   carousel_slider: ^4.2.1
@@ -36,6 +37,7 @@ dependencies:
   firebase_core: ^2.21.0
   firebase_auth: ^4.12.1
   firebase_messaging: ^14.7.3
+  google_sign_in:
   file_picker:
   firebase_storage: ^11.4.1
   cloud_firestore: ^4.12.2
